recursion.logo.koch.SquareKoch.scala.error
Erreur de compilation :
SquareKoch:26: error: not found: value snowSide
    snowSide(levels-1,length/diviseur)
    ^SquareKoch:28: error: not found: value snowSide
    snowSide(levels-1,length/diviseur)
    ^SquareKoch:30: error: not found: value snowSide
    snowSide(levels-1,length/diviseur)
    ^SquareKoch:32: error: not found: value snowSide
    snowSide(levels-1,length/diviseur)
    ^SquareKoch:34: error: not found: value snowSide
    snowSide(levels-1,length/diviseur)
    ^