recursion.logo.koch.SquareKoch.scala.code
def snowSquare (levels:Int, length:Double) {
    squareSide(levels, length);
    right(90);
    setColor(Color.blue);
    squareSide(levels, length);
    right(90);
    setColor(Color.orange);
    squareSide(levels, length);
    right(90);
    setColor(Color.magenta);
    squareSide(levels, length);
    right(90);
}
def squareSide(levels:Int, length:Double) {
  var diviseur=0
  if (levels==0){
    diviseur=1
  }
  else {
    diviseur=3
  }
  if (levels==0){
    avance(length)
  }
  else {
    snowSide(levels-1,length/diviseur)
    gauche(90)
    snowSide(levels-1,length/diviseur)
    droite(90)
    snowSide(levels-1,length/diviseur)
    droite(90)
    snowSide(levels-1,length/diviseur)
    gauche(90)
    snowSide(levels-1,length/diviseur)
  }
}